--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,15 @@ display:block;
 height:80px; /* fixed header height*/
 margin:-80px 0 0; /* negative fixed header height */
 }
+
+#loading {
+ width: 100%;  
+ height: 100%;  
+ top: 0px;
+ left: 0px;
+ position: fixed;  
+ display: block;  
+ opacity: 0.7;  
+ background-color: #fff;  
+ z-index: 99;  
+ text-align: center; }
