--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ height:80px; /* fixed header height*/
 margin:-80px 0 0; /* negative fixed header height */
 }
 
-#loading {
+.loading {
  width: 100%;  
  height: 100%;  
  top: 0px;
