--- a/css/style.css
+++ b/css/style.css
@@ -7,46 +7,46 @@
  */
 
 html {
-    font-family: 'Spoqa Han Sans', 'Apple SD Gothic Neo', '애플 SD 산돌고딕 Neo', '나눔바른고딕', 'NanumBarunGothic', '나눔바른고딕OTF', 'NanumBarunGothicOTF', 'NanumGothic', '나눔고딕', 'Malgun Gothic', '맑은 고딕', sans-serif;
-    font-weight: 400;
-    background-color: #f1f1f1;
+		font-family: 'Spoqa Han Sans', 'Apple SD Gothic Neo', '애플 SD 산돌고딕 Neo', '나눔바른고딕', 'NanumBarunGothic', '나눔바른고딕OTF', 'NanumBarunGothicOTF', 'NanumGothic', '나눔고딕', 'Malgun Gothic', '맑은 고딕', sans-serif;
+		font-weight: 400;
+		background-color: #f1f1f1;
 }
 
 h1 {
-  font-size: 3rem;
+	font-size: 3rem;
 }
 
 h2 {
-  font-size: 2.5rem;
+	font-size: 2.5rem;
 }
 
 h3 {
-  font-size: 2rem;
+	font-size: 2rem;
 }
 
 h4 {
-  font-size: 1.5rem;
+	font-size: 1.5rem;
 }
 
 h5 {
-  font-size: 1.25rem;
+	font-size: 1.25rem;
 }
 
 h6 {
-  font-size: 1rem;
+	font-size: 1rem;
 }
 
 p {
-    font-size: 16px;
-    line-height: 24px;
+		font-size: 16px;
+		line-height: 24px;
 }
 
 h1,h2,h3,h4,h5,h6,p {
-    margin : 0;
+		margin : 0;
 }
 
 .icon-block {
-  padding: 0 15px;
+	padding: 0 15px;
 }
 .icon-block .material-icons {
 	font-size: inherit;
@@ -56,44 +56,44 @@ h1,h2,h3,h4,h5,h6,p {
 	width: 100%;
 	border-top: solid 0px;
 	border-bottom: solid 1px #f2f2f2;
-    margin: 20px 0;
+		margin: 20px 0;
 }
 
 .container{
-/*    width:100%;*/
+/*		width:100%;*/
 }
 
 .section{
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+		padding-top: 1rem;
+		padding-bottom: 1rem;
 }
 
 .contents{
-    background-color: #fff;
-    padding: 0 20px;
-    margin-bottom: 8px;
-    border-bottom: 1px solid #e8e8e8;
+		background-color: #fff;
+		padding: 0 20px;
+		margin-bottom: 8px;
+		border-bottom: 1px solid #e8e8e8;
 }
 
 /*superscript*/
 .ss {
-    font-size: 14px;
-    background: #f4f6f8;
+		font-size: 14px;
+		background: #f4f6f8;
 }
 
 .ssc {
-    color: #D32F2F;
+		color: #D32F2F;
 }
 
 .ssp {
-    padding-bottom: 8px;
-    padding-top: 8px;
-    padding-right: 15px;
-    margin-bottom: 0px;
+		padding-bottom: 8px;
+		padding-top: 8px;
+		padding-right: 15px;
+		margin-bottom: 0px;
 }
 
 ul:not(.browser-default) {
-  padding-left: 18px;
+	padding-left: 18px;
 }
 
 li > a, sup {
@@ -101,16 +101,16 @@ li > a, sup {
 }
 
 .header {
-    font-size: 18px;
+		font-size: 18px;
 	font-weight: bold;
 }
 
 .cut {
-    margin-top: 15px;
+		margin-top: 15px;
 }
 
 .btn-floating {
-    line-height: 0px;
+		line-height: 0px;
 }
 
 .row {
@@ -118,17 +118,17 @@ li > a, sup {
 }
 
 .clipboard > img{
-    width:20px;
+		width:20px;
 }
 
 .clipboard {
-    background-color: #f0f0f0 !important;
-    opacity: 0.3;
+		background-color: #f0f0f0 !important;
+		opacity: 0.3;
 }
 
 .clipboard:hover, .clipboard:active, clipboard:link, clipboard:visited {
-    background-color: #e0e0e0 !important;
-    opacity: 0.6;
+		background-color: #e0e0e0 !important;
+		opacity: 0.6;
 }
 
 :target:before {
@@ -138,14 +138,35 @@ height:80px; /* fixed header height*/
 margin:-80px 0 0; /* negative fixed header height */
 }
 
-.loading {
- width: 100%;  
- height: 100%;  
- top: 0px;
- left: 0px;
- position: fixed;  
- display: block;  
- opacity: 0.7;  
- background-color: #fff;  
- z-index: 99;  
- text-align: center; }
+.rssul{
+  padding-left: 0px !important;
+}
+
+.rsslink{
+  font-size: 120%;
+}
+
+.rssdate{
+  font-size: 90%;
+}
+
+.rssdesc{
+
+}
+
+.rsshr{
+  border-top: #aaa;
+}
+
+.rsstitle{
+  font-size: 1.5em;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  text-align: center;
+}
+
+.rssrm{
+  font-size: 90%;
+  color: black;
+  text-decoration: underline;
+}
